--- a/.env.example
+++ b/.env.example
@@ -1,67 +1,75 @@
-# CI/CD Pipeline Analyzer - Environment Configuration
+# ===============================================
+# CI/CD Pipeline Analyzer - Environment Variables
+# ===============================================
 
-# === Application Configuration ===
+# Application Environment
 NODE_ENV=development
-PORT=3000
-HOST=0.0.0.0
+LOG_LEVEL=info
 
-# === Database Configuration ===
-DB_TYPE=postgres
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=cicd_analyzer
-DB_USERNAME=postgres
-DB_PASSWORD=your_db_password
-DB_SSL=false
-DB_POOL_SIZE=10
+# Server Configuration
+SERVER_HOST=localhost
+SERVER_PORT=3000
+SERVER_TIMEOUT=30000
 
-# === Redis Configuration ===
+# Security Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_EXPIRES_IN=24h
+CORS_ORIGIN=http://localhost:3000
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# Database Configuration
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_NAME=cicd_analyzer
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=your-database-password
+DATABASE_SSL=false
+DATABASE_POOL_MIN=2
+DATABASE_POOL_MAX=10
+
+# Redis Configuration
 REDIS_HOST=localhost
 REDIS_PORT=6379
-# REDIS_PASSWORD=your_redis_password
+REDIS_PASSWORD=
 REDIS_DB=0
-REDIS_TTL=3600
+REDIS_KEY_PREFIX=cicd:
+REDIS_DEFAULT_TTL=3600
 
-# === Authentication Configuration ===
-# IMPORTANT: Generate a secure 32+ character secret for production
-JWT_SECRET=your_very_long_and_secure_jwt_secret_key_here_at_least_32_characters
-JWT_EXPIRES_IN=24h
-REFRESH_TOKEN_EXPIRES_IN=7d
-BCRYPT_ROUNDS=12
+# GitHub Provider Configuration
+GITHUB_APP_ID=
+GITHUB_PRIVATE_KEY=
+GITHUB_WEBHOOK_SECRET=your-webhook-secret
 
-# === CORS Configuration ===
-CORS_ORIGIN=*
-CORS_CREDENTIALS=true
+# GitLab Provider Configuration
+GITLAB_TOKEN=
+GITLAB_WEBHOOK_SECRET=your-webhook-secret
 
-# === Security Configuration ===
-RATE_LIMITING=true
-HELMET_ENABLED=true
-COMPRESSION_ENABLED=true
+# Jenkins Provider Configuration
+JENKINS_URL=
+JENKINS_USERNAME=
+JENKINS_TOKEN=
 
-# === Module Configuration ===
-MODULES_ENABLED=github-actions,gitlab-ci,jenkins
-CACHING_ENABLED=true
-CACHING_STRATEGY=lru
-CACHING_MAX_SIZE=10000
+# Azure DevOps Provider Configuration
+AZURE_PERSONAL_ACCESS_TOKEN=
+AZURE_ORGANIZATION=
 
-# === Monitoring Configuration ===
-MONITORING_ENABLED=true
-PROMETHEUS_ENABLED=true
-JAEGER_ENABLED=false
-LOG_LEVEL=info
-LOG_FORMAT=json
-# LOG_FILE=logs/app.log
+# CircleCI Provider Configuration
+CIRCLECI_TOKEN=
 
-# === Provider Configuration - GitHub Actions ===
-# GITHUB_TOKEN=your_github_personal_access_token
-# GITHUB_WEBHOOK_SECRET=your_github_webhook_secret
+# Monitoring & Observability
+ENABLE_METRICS=true
+ENABLE_HEALTH_CHECKS=true
+PERFORMANCE_MONITORING=true
 
-# === Provider Configuration - GitLab CI ===
-# GITLAB_TOKEN=your_gitlab_access_token
-# GITLAB_BASE_URL=https://gitlab.com/api/v4
-# GITLAB_WEBHOOK_SECRET=your_gitlab_webhook_secret
+# Feature Flags
+FEATURE_CACHING=true
+FEATURE_RATE_LIMITING=true
+FEATURE_COMPRESSION=true
+FEATURE_HELMET_SECURITY=true
 
-# === Provider Configuration - Jenkins ===
-# JENKINS_URL=https://your-jenkins-instance.com
-# JENKINS_USERNAME=your_jenkins_username
-# JENKINS_TOKEN=your_jenkins_api_token
+# External Services
+WEBHOOK_TIMEOUT=5000
+API_TIMEOUT=10000
+RETRY_ATTEMPTS=3
+RETRY_DELAY=1000
