--- a/package.json
+++ b/package.json
@@ -41,48 +41,48 @@
     "docker:run": "docker run -p 3000:3000 cicd-pipeline-analyzer"
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "bcryptjs": "^2.4.3",
+    "bull": "^4.11.5",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
-    "cors": "^2.8.5",
-    "compression": "^1.7.4",
-    "winston": "^3.11.0",
-    "dotenv": "^16.3.1",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3",
-    "typeorm": "^0.3.17",
+    "lodash": "^4.17.21",
     "pg": "^8.11.3",
     "redis": "^4.6.10",
-    "bull": "^4.11.5",
-    "axios": "^1.6.0",
+    "typeorm": "^0.3.17",
     "uuid": "^9.0.1",
-    "date-fns": "^2.30.0",
-    "lodash": "^4.17.21"
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/node": "^20.8.0",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/compression": "^1.7.5",
-    "@types/jsonwebtoken": "^9.0.6",
     "@types/bcryptjs": "^2.4.6",
-    "@types/pg": "^8.10.7",
-    "@types/uuid": "^9.0.7",
-    "@types/lodash": "^4.14.202",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.8",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "^20.8.0",
+    "@types/pg": "^8.10.7",
     "@types/supertest": "^2.0.16",
-    "typescript": "^5.2.2",
-    "tsx": "^4.1.0",
-    "tsc-alias": "^1.8.8",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "supertest": "^6.3.3",
+    "@types/uuid": "^9.0.7",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.52.0",
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@typescript-eslint/parser": "^6.9.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
-    "nodemon": "^3.0.1"
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "tsc-alias": "^1.8.8",
+    "tsx": "^4.1.0",
+    "typescript": "^5.2.2"
   },
   "repository": {
     "type": "git",
