--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "ioredis": "^5.6.1",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
@@ -64,6 +65,7 @@
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/ioredis": "^4.28.10",
     "@types/jest": "^29.5.8",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.14.202",
