--- a/package.json
+++ b/package.json
@@ -84,6 +84,8 @@
     "ts-jest": "^29.1.1",
     "tsc-alias": "^1.8.8",
     "tsx": "^4.1.0",
+    "typeorm-cli": "^1.0.7",
+    "typeorm-extension": "^3.7.1",
     "typescript": "^5.2.2"
   },
   "repository": {
