--- a/package.json
+++ b/package.json
@@ -38,12 +38,21 @@
     "clean": "rimraf dist",
     "setup": "npm run clean && npm run build",
     "docker:build": "docker build -t cicd-pipeline-analyzer .",
-    "docker:run": "docker run -p 3000:3000 cicd-pipeline-analyzer"
+    "docker:run": "docker run -p 3000:3000 cicd-pipeline-analyzer",
+    "db:init": "tsx src/cli/database.cli.ts init",
+    "db:migrate": "tsx src/cli/database.cli.ts migrate",
+    "db:seed": "tsx src/cli/database.cli.ts seed",
+    "db:health": "tsx src/cli/database.cli.ts health",
+    "db:status": "tsx src/cli/database.cli.ts status",
+    "db:maintenance": "tsx src/cli/database.cli.ts maintenance",
+    "db:backup": "tsx src/cli/database.cli.ts backup",
+    "db:clear": "tsx src/cli/database.cli.ts clear --confirm"
   },
   "dependencies": {
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "bull": "^4.11.5",
+    "commander": "^14.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
