--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "db:clear": "tsx src/cli/database.cli.ts clear --confirm"
   },
   "dependencies": {
-    "axios": "^1.6.0",
+    "@types/axios": "^0.9.36",
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "bull": "^4.11.5",
     "commander": "^14.0.0",
