--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@types/ws": "^8.18.1",
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
-    "bull": "^4.11.5",
+    "bull": "^4.16.5",
     "commander": "^14.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -66,6 +66,7 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "node-cron": "^4.2.1",
     "pg": "^8.11.3",
     "redis": "^4.6.10",
     "socket.io": "^4.8.1",
@@ -84,9 +85,10 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.8.0",
+    "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.10.7",
     "@types/supertest": "^2.0.16",
-    "@types/uuid": "^9.0.7",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.52.0",
