Add Docker commands to package.json for development and database management
- Added scripts for Docker development environment: `docker:dev`, `docker:dev:detached`, `docker:down`, `docker:down:volumes`, `docker:logs`, `docker:shell`, and `docker:db:shell`.
- These scripts facilitate easier management of Docker containers and PostgreSQL database interactions.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,13 @@
     "setup": "npm run clean && npm run build",
     "docker:build": "docker build -t cicd-pipeline-analyzer .",
     "docker:run": "docker run -p 3000:3000 cicd-pipeline-analyzer",
+    "docker:dev": "docker-compose up --build",
+    "docker:dev:detached": "docker-compose up --build -d",
+    "docker:down": "docker-compose down",
+    "docker:down:volumes": "docker-compose down -v",
+    "docker:logs": "docker-compose logs -f app",
+    "docker:shell": "docker-compose exec app sh",
+    "docker:db:shell": "docker-compose exec postgres psql -U postgres -d cicd_analyzer",
     "db:init": "tsx src/cli/database.cli.ts init",
     "db:migrate": "tsx src/cli/database.cli.ts migrate",
     "db:seed": "tsx src/cli/database.cli.ts seed",
