--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
+    "sqlite3": "^5.1.7",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "tsc-alias": "^1.8.8",
