--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
     "test": "jest",
+    "test:unit": "jest --config jest.unit.config.js",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:integration": "jest --testPathPattern=integration",
     "test:e2e": "jest --config jest.e2e.config.js",
+    "test:db": "jest --testPathPattern=database",
+    "test:all": "npm run test:unit && npm run test:integration",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "format": "prettier --write src/**/*.ts",
