--- a/.github/workflows/ci-simple.yml
+++ b/.github/workflows/ci-simple.yml
@@ -19,6 +19,7 @@ jobs:
     timeout-minutes: 15
     
     strategy:
+      fail-fast: false  # Don't cancel other jobs if one fails
       matrix:
         node-version: [18, 20]
         
@@ -34,6 +35,10 @@ jobs:
 
       - name: 📦 Install Dependencies
         run: npm ci
+
+      - name: 🔍 Check TypeScript
+        run: npx tsc --noEmit
+        continue-on-error: false
 
       - name: 🏗️ Build Project
         run: npm run build
