--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,6 +77,7 @@ jobs:
     needs: [quality]
     
     strategy:
+      fail-fast: false  # Don't cancel jobs if one fails
       matrix:
         node-version: [18, 20]
         
