feat: enhance .env.example with comprehensive environment variable configurations

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,54 @@
-# ===============================================
+# CI/CD Pipeline Analyzer – Example Environment
+# Copy to .env and adjust values for your setup. Do not commit .env.
+
+# Application
+NODE_ENV=development
+HOST=0.0.0.0
+PORT=3000
+LOG_LEVEL=info
+
+# Security (use strong, unique values in production; >= 32 chars)
+JWT_SECRET=dev-jwt-secret-change-in-production-minimum-32-characters-long
+JWT_REFRESH_SECRET=dev-refresh-secret-change-in-production-minimum-32-characters-long
+API_KEY_SECRET=dev-api-key-secret-change-in-production-minimum-32-characters-long
+
+# Database (PostgreSQL)
+DB_TYPE=postgres
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=cicd_analyzer
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_SSL=false
+
+# Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+
+# CORS
+CORS_ORIGIN=*
+CORS_CREDENTIALS=true
+
+# Monitoring
+MONITORING_ENABLED=true
+PROMETHEUS_ENABLED=false
+JAEGER_ENABLED=false
+
+# Local development toggles
+# Set to true to start without connecting to DB/Redis (readiness will be not-ready)
+SKIP_DB_INIT=false
+SKIP_REDIS_INIT=false
+
+# Optional provider tokens (uncomment and set when integrating)
+# GITHUB_TOKEN=
+# GITHUB_WEBHOOK_SECRET=
+# GITLAB_TOKEN=
+# GITLAB_BASE_URL=https://gitlab.com/api/v4
+# GITLAB_WEBHOOK_SECRET=
+# JENKINS_URL=
+# JENKINS_USERNAME=
+# JENKINS_TOKEN=# ===============================================
 # CI/CD Pipeline Analyzer - Environment Variables
 # ===============================================
 
