--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "lodash": "^4.17.21",
     "node-cron": "^4.2.1",
     "pg": "^8.11.3",
+  "prom-client": "^15.1.3",
     "redis": "^4.6.10",
     "socket.io": "^4.8.1",
     "typeorm": "^0.3.17",
