--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -172,14 +172,24 @@ jobs:
 
       - name: ⏳ Wait for Services
         run: |
-          echo "Waiting for PostgreSQL..."
-          for i in {1..30}; do
-            if pg_isready -h localhost -p 5432 -U test_user; then
+          echo "Waiting for PostgreSQL on localhost:5432..."
+          for i in {1..60}; do
+            if (echo > /dev/tcp/localhost/5432) >/dev/null 2>&1; then
               echo "PostgreSQL is ready!"
               break
             fi
-            echo "Waiting for PostgreSQL... ($i/30)"
-            sleep 2
+            echo "Waiting for PostgreSQL... ($i/60)"
+            sleep 1
+          done
+
+          echo "Waiting for Redis on localhost:6379..."
+          for i in {1..60}; do
+            if (echo > /dev/tcp/localhost/6379) >/dev/null 2>&1; then
+              echo "Redis is ready!"
+              break
+            fi
+            echo "Waiting for Redis... ($i/60)"
+            sleep 1
           done
 
       - name: 🔗 Run Integration Tests
@@ -219,6 +229,9 @@ jobs:
     steps:
       - name: 📥 Checkout Code
         uses: actions/checkout@v4
+
+      - name: 🧰 Set up QEMU (multi-arch emulation)
+        uses: docker/setup-qemu-action@v3
 
       - name: 🐳 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -368,11 +381,11 @@ jobs:
           echo ""
           echo "### 📊 Job Results:"
           echo "- 🔍 Code Quality: ${{ needs.quality.result }}"
-          echo "- 🧪 Unit Tests: ${{ needs.unit-tests.result }}"
+          echo "- 🧪 Unit Tests: ${{ needs['unit-tests'].result }}"
           echo ""
-          
+
           if [[ "${{ needs.quality.result }}" == "success" && 
-                "${{ needs.unit-tests.result }}" == "success" ]]; then
+                "${{ needs['unit-tests'].result }}" == "success" ]]; then
             echo "🎉 All critical checks passed! Ready for production."
           else
             echo "❌ Some checks failed. Please review the results."
